# Gimp_Layer_Effects_Text_Styler_Plugin_GEGL_Effects

./: README.md  build_everything_linux.sh  build_everything_windows_mysys2_only.sh  changes.md  changesmade.txt  gegleffects.c
GEGL_EFFECTS/: GEGL_Effects_Legacy_plzignore.7z  README.md  build_linux.sh  gegleffects.c  meson.build
GEGL_EFFECTS/compile_bevel_here/: README.md  bevel.c  (+2 more)
Image_previews/: example_text_style_preset_to_import.txt
SourceCode/: build_everything_linux.sh  build_everything_windows.sh
SourceCode/custom_bevel/: cbevel.c  meson.build
SourceCode/port_load/: loadport.c  meson.build
bevel/: bevel_bump.c
compile_bevel_here/: README.md  bevel.c  bevel_bump.c  meson.build
compile_bevelbumpmap_here/: bevelbump.c  meson.build
compile_gegl_effects2_here/: build_linux.sh  gegleffects299.c  meson.build
compile_gegl_effects_here/: gegleffects299.c  gegleffectspending.c  meson.build
compile_glass_over_text_here/: Directory_to_put_binaries.txt  glassovertext.c  meson.build
compile_innerglow2_here/: inner-glow299.c  meson.build
compile_innerglow_here/: inner-glow.c  inner-glow299.c
compile_shiny_surface_here/: README.md  meson.build  shinytext.c
compile_zzstrokebevelimage_here/: gegleffectspending.c  zzstrokebevelimage.c
custom_bevel/: build_plugin_linux.sh
gegl_effects_remake/: build_gegl_effects_linux.sh  build_gegl_effects_windows.sh
gegl_effects_source_code/: build_everything_Linux.sh  build_everything_Windows_MYSYS2.sh
glass_over_text/: glassovertext.c
inner_glow/: inner-glow.c
ssg/: build_plugin_windows.sh  ssg.c
(+118 files in other folders)
